--- a/src/app/pages/retro-brainstorm/retro-brainstorm.component.html
+++ b/src/app/pages/retro-brainstorm/retro-brainstorm.component.html
@@ -6,8 +6,8 @@
 
 
 <div class="d-flex justify-content-end" *ngIf="retroRight != null">
-  <span class="pill-title text-bold" [ngClass]="retroRight.ideaRight > 0 ? 'text-success' : 'text-danger'">Fikir Hakkı:
-    {{ retroRight.ideaRight }}</span>
+  <span class="pill-title text-bold" [ngClass]="retroRight.ideaRight > 0 ? 'text-success' : 'text-danger'">
+    {{ 'retro_brainstrom.Number_of_Intellectual_Rights' | translate }}</span>
 </div>
 <div #divView>
 
