--- a/src/app/workshop/member-login/member-login.component.html
+++ b/src/app/workshop/member-login/member-login.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="loginForm" (ngSubmit)="logIn()" class="create-retro__form">
 
 
-    <h1 class="text-center mb-5">GİRİŞ</h1>
+    <h1 class="text-center mb-5">{{'member_login.title' | translate}}</h1>
 
     <!-- <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
 
