--- a/src/app/pages/retro-comment/retro-comment.component.html
+++ b/src/app/pages/retro-comment/retro-comment.component.html
@@ -46,7 +46,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Yorum</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">{{ 'retro_comment.comment' | translate }}</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -62,12 +62,12 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
               data-dismiss="modal">
-              Vazgeç
+              {{ 'retro_comment.give_up' | translate }}
             </button>
   
             <button type="button" (click)="sendComment()"
               class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-              Gönder
+              {{ 'retro_comment.send' | translate }}
             </button>
   
           </div>
