--- a/src/app/shared/image-upload/image-upload.component.html
+++ b/src/app/shared/image-upload/image-upload.component.html
@@ -4,7 +4,7 @@
     <input id="imagePath"  #file type="file" accept="image/*" multiple placeholder="Upload file(-s)"
       (change)="onFilesSelected($event)" class="d-none" />
 
-      <button type="button" class="btn btn-outline-theme  btn-block" (click)="file.click()"> Yükle</button>
+      <button type="button" class="btn btn-outline-theme  btn-block" (click)="file.click()">{{ 'image_upload.load' | translate }}</button>
   </div>
 </div>
 
