--- a/src/app/workshop/login/login.component.html
+++ b/src/app/workshop/login/login.component.html
@@ -9,12 +9,12 @@
 
     <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
 
-      <label for="username">Kullanıcı Adı</label>
+      <label for="username">{{ 'login.username' | translate }} </label>
       <input type="text" id="username" (blur)="clearError()" (focus)="clearError()" class="form-control"
         formControlName="username" (focus)="focus = true" (blur)="focus = false" />
       <div
         *ngIf="(loginForm.get('username').invalid && ( loginForm.get('username').touched) || loginForm.get('username').dirty)">
-        <small *ngIf="loginForm.get('username').errors?.required" class="text-danger">Kullanıcı adı giriniz</small>
+        <small *ngIf="loginForm.get('username').errors?.required" class="text-danger">{{ 'login.username_validation' | translate }}</small>
         
       </div>
     </div>
@@ -22,12 +22,14 @@
 
     <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
 
-      <label for="password">Şifre</label>
+      <label for="password">{{ 'login.password' | translate }}</label>
       <input type="password" (blur)="clearError()" (focus)="clearError()" formControlName="password"
         class="form-control" (focus)="focus1 = true" (blur)="focus1 = false" />
       <div
         *ngIf="(loginForm.get('password').invalid && ( loginForm.get('password').touched) || loginForm.get('password').dirty)">
-        <small *ngIf="loginForm.get('password').errors?.required" class="text-danger">Şifre giriniz</small>
+        <small *ngIf="loginForm.get('password').errors?.required" class="text-danger">
+          {{ 'login.password_validation' | translate }}
+        </small>
       </div>
     </div>
 <!-- 
@@ -46,7 +48,7 @@
 
 
     <div class="d-flex btn-responsive">
-      <button type="submit" class="btn btn-theme btn-vertical-padding btn-horizontal-padding">GİRİŞ YAP</button>
+      <button type="submit" class="btn btn-theme btn-vertical-padding btn-horizontal-padding">{{ 'login.login' | translate }}</button>
     </div>
 
     <p class="text-center text-danger" *ngIf="errorMessage">
