--- a/src/app/workshop/super-user-management/super-user-management.component.html
+++ b/src/app/workshop/super-user-management/super-user-management.component.html
@@ -1,10 +1,10 @@
 <div class="row   mb-3 mt-5">
   <div class="col-sm-6 d-flex align-items-center">
-    <h3 class="float-left mb-0">Adminler</h3>
+    <h3 class="float-left mb-0">{{ 'super_admin.title' | translate }}</h3>
   </div>
   <div class="col-sm-6">
     <button class=" float-right btn btn-theme btn-horizontal-padding btn-vertical-padding" data-toggle="modal"
-      data-target="#addModal">Super Admin Ekle</button>
+      data-target="#addModal">{{ 'super_admin.add_super_admin' | translate }}</button>
   </div>
 </div>
 <div class="card card-theme">
@@ -12,12 +12,12 @@
     <table class="table w-100 table-theme">
       <thead>
         <tr>
-          <th>Kullanıcı Adı</th>
-          <th>Şifre</th>
-          <th>Eposta</th>
+          <th>{{ 'super_admin.username' | translate }}</th>
+          <th>{{ 'super_admin.password' | translate }}</th>
+          <th>{{ 'super_admin.email' | translate }}</th>
         
 
-          <th class="text-right" style="padding-right: 50px;">İşlemler</th>
+          <th class="text-right" style="padding-right: 50px;">{{ 'super_admin.transactions' | translate }}</th>
         </tr>
       </thead>
       <tbody>
@@ -77,7 +77,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Kullanıcı Adı</label>
+                <label>{{ 'super_admin.username' | translate }}</label>
                 <input style="max-height: max-content" rows="10" class="form-control textarea"
                   [(ngModel)]="user.userName" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -87,7 +87,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Şifre</label>
+                <label>{{ 'super_admin.password' | translate }}</label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="user.rawPassword" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -97,7 +97,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Email</label>
+                <label>{{ 'super_admin.email' | translate }}</label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="user.email" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -112,7 +112,7 @@
 
                 <select class="form-control" disabled    [(ngModel)]="user.statu"  [ngModelOptions]="{ standalone: true }">
                        
-                       <option value="SuperAdmin" selected>Super Admin</option>
+                       <option value="SuperAdmin" selected>Sup</option>
           
                 </select>
 
@@ -159,7 +159,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Yeni Şifre</label>
+                <label>{{ 'super_admin.new_password' | translate }}</label>
                 <input style="max-height: max-content" rows="10" class="form-control textarea"
                   [(ngModel)]="resetPassword.newPassword" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -169,7 +169,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Şifre Tekrar</label>
+                <label>{{ 'super_admin.password_again' | translate }}</label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="resetPassword.confirmPassword" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -180,11 +180,11 @@
 
         <div class="modal-footer d-flex align-items-center">
           <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal">Vazgeç
+            data-dismiss="modal">{{ 'super_admin.give_up' | translate }
           </button>
           <button (click)="changePassword()" type="button"
             class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            Kaydet
+            {{ 'super_admin.save' | translate }
           </button>
 
         </div>
